--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,7 +129,7 @@
      <% if Item.exists? %>
      <% @items.each do |item|%>
       <li class='list'>
-        <%= link_to "/item/show" do %>
+        <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
 
