--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -135,9 +135,14 @@
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
 
+          <%# itemが売れていればSold Out!を表示%>
+          <% if item.order.present? %>
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
+          <% end %>
+          <%# /itemが売れていればSold Out!を表示%>
+
 
         </div>
         <% end %>
