--- a/app/assets/stylesheets/items/show.css
+++ b/app/assets/stylesheets/items/show.css
@@ -147,13 +147,14 @@
   text-align: center;
 }
 
-.comment-text {
+/* form input,
+form textarea {
   width: 100%;
   height: 100px;
   padding: 10px;
   border: solid 2px #dedede;
   resize: none;
-}
+} */
 
 .comment-warn {
   padding: 10px;
@@ -162,7 +163,7 @@
   text-align: left;
 }
 
-.comment-btn {
+/* form input[type="submit"] {
   line-height: 48px;
   background-color: #3CCACE;
   border: 1px solid #3CCACE;
@@ -172,7 +173,7 @@
   font-size: 18px;
   border-radius: 100px;
   margin-bottom: 2vh;
-}
+} */
 
 .comment-flag {
   display: flex;
