--- a/app/assets/stylesheets/items/show.css
+++ b/app/assets/stylesheets/items/show.css
@@ -147,8 +147,7 @@
   text-align: center;
 }
 
-/* form input,
-form textarea {
+.comment-area {
   width: 100%;
   height: 100px;
   padding: 10px;
@@ -163,7 +162,7 @@ form textarea {
   text-align: left;
 }
 
-/* form input[type="submit"] {
+.comment-submit {
   line-height: 48px;
   background-color: #3CCACE;
   border: 1px solid #3CCACE;
@@ -173,7 +172,7 @@ form textarea {
   font-size: 18px;
   border-radius: 100px;
   margin-bottom: 2vh;
-} */
+}
 
 .comment-flag {
   display: flex;
