--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -89,13 +89,13 @@
   <div class="comment-box">
     <% if current_user %>
     <%=form_with model: [@item,@comment], local: true do |f| %>
-      <%= f.text_area :text, placeholder: "コメントする" %>
+      <%= f.text_area :text, placeholder: "コメントする",class:"comment-area" %>
       <p class="comment-warn">
         相手のことを考え丁寧なコメントを心がけましょう。
         <br>
         不快な言葉遣いなどは利用制限や退会処分となることがあります。
       </p>
-      <%= f.submit "コメントする" %>
+      <%= f.submit "コメントする",class:"comment-submit" %>
       <% end %>
       <% else %>
       <strong><p>※※※ コメントの投稿には新規登録/ログインが必要です ※※※</p></strong>
