--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,11 +1,13 @@
 <%# CSS・・・assets/stylesheets/shared/header.css %>
 <header class='top-page-header'>
+
   <div class='search-bar-contents'>
     <%= link_to image_tag("furima-logo-color.png", class:"furima-icon"), "/" %>
     <%= form_with url: search_items_path, local: true, method: :get, class: "search-form" do |form| %>
-      <%= form.search_field :keyword, placeholder: "商品を検索する", class:'input-box' %>
+      <%= form.text_field :keyword, placeholder: "商品を検索する", class:'input-box' %>
       <%= form.submit "検索", class:"search-button" %>
     <% end %>
+
   </div>
   <div class='nav'>
     <ul class='lists-left'>
